--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
      <div class="abtimg" data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
-     <img src="https://images.pexels.com/photos/3639507/pexels-photo-3639507.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="..." class="rounded-circle" height="400px" width="400px">
+     <img src="abt.jpg" alt="..." class="rounded-circle" height="400px" width="400px">
       <div class="abouttext">
       <P>Lorem ipsum dolor sit amet, <br>consectetur adipisicing<br> elit, sed do eiusmod
       tempor incididunt ut labore et <br>dolore magna aliqua. Ut enim ad minim veniam,
